fixed horizontal scroll issue

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+html, body {
+  overflow-x: hidden;
+}
+body {
+  position: relative
+}
